# sparka

./: .gitignore  Cargo.toml  Dockerfile.android  OpenSpec.yaml  README.md  build-apk.sh  setup-github.sh
.github/workflows/: android.yml  ci-cd.yml  release-apk.yml
android/: .gitignore  build.gradle  gradlew
android-sdk/licenses/: android-sdk-license
android/app/: build.gradle  debug.keystore  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sparka/: BootReceiver.java  MainActivity.java  OverlayService.java  SchedulingService.java  SuggestionNotificationManager.java  SuggestionReceiver.java  TicketCheckService.java
android/app/src/main/res/layout/: activity_main.xml  overlay_layout.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
docs/: android-oauth-setup.md  drive-integration.md
src/: auth.rs  calendar.rs  drive.rs  file_handler.rs  groq.rs  lib.rs  overlay.rs  scheduler.rs  storage.rs
