[package]
name = "sparka"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Android dependencies
jni = "0.21"
android_logger = "0.13"
log = "0.4"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Google OAuth
oauth2 = "4.4"

# Google Drive API
google-drive3 = "5.0"

# File handling
mime_guess = "2.0"

# Local storage
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"